client/src/App.css
.App {
  text-align: center;
  background: url("./img/logo-nav_2x.png") no-repeat 0 0;
}

.App-logo {
  height: 20vh;
  pointer-events: none;
  background: url("./img/logo-nav_2x.png") no-repeat 0 0;

}

@media (prefers-reduced-motion: no-preference) {
  /* .App-logo {
    animation: App-logo-spin infinite 20s linear;
  } */
}

.App-header {
  background-color: #f3f1c6;
  min-height: 5vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #c48d3f;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

body {
  background-color: #f3f1c6;
  font-family: 'Ubuntu', sans-serif;
}

.signin-main {
  background-color: #FFFFFF;
  width: 410px;
  height: 625px;
  margin: 7em auto;
  border-radius: 1.5em;
  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
  
}

.signout-main {
  background-color: #FFFFFF;
  width: 400px;
  height: 625px;
  margin: 7em auto;
  border-radius: 1.5em;
  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
}

.add-post {
    background-color: #FFFFFF;
    width: 400px;
    height: 475px;
    margin: 5em auto;
    border-radius: 1.5em;
    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
}

.signin-in {
    background-color: #FFFFFF;
    width: 420px;
    height: 450px;
    margin: 7em auto;
    border-radius: 1em;
    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
}

.editAcc {
    background-color: #FFFFFF;
    width: 420px;
    height: 450px;
    margin: 7em auto;
    border-radius: 1em;
    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
}

.sign {
  padding-top: 40px;
  color: #a06c00;
  font-family: 'Ubuntu', sans-serif;
  font-weight: bold;
  font-size: 23px;
}

.un {
    width: 76%;
    color: rgb(38, 50, 56);
    font-weight: 700;
    font-size: 14px;
    letter-spacing: 1px;
    background: rgba(136, 126, 126, 0.04);
    padding: 10px 20px;
    border: none;
    border-radius: 20px;
    box-sizing: border-box;
    border: 2px solid rgba(0, 0, 0, 0.02);
    margin-bottom: 50px;
    margin-left: 46px;
    text-align: center;
    margin-bottom: 27px;
    font-family: 'Ubuntu', sans-serif;
    border: 2px solid rgba(0, 0, 0, 0.18) !important;
}




form.form1 {
  padding-top: 40px;
}

.pass {
    width: 76%;
    color: rgb(38, 50, 56);
    font-weight: 700;
    font-size: 14px;
    letter-spacing: 1px;
    background: rgba(136, 126, 126, 0.04);
    padding: 10px 20px;
    border: none;
    border-radius: 20px;
    outline: none;
    box-sizing: border-box;
    border: 2px solid rgba(0, 0, 0, 0.02);
    margin-bottom: 50px;
    margin-left: 46px;
    text-align: center;
    margin-bottom: 27px;
    font-family: 'Ubuntu', sans-serif;
    border: 2px solid rgba(0, 0, 0, 0.18) !important;
}


.submit {
cursor: pointer;
  border-radius: 5em;
  color: #fff;
  background: #a06c00;
  border: 0;
  padding-left: 40px;
  padding-right: 40px;
  padding-bottom: 10px;
  padding-top: 10px;
  font-family: 'Ubuntu', sans-serif;
  margin-left: 35%;
  font-size: 13px;
  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
}

.forgot {
  background: none!important;
  border: none;
  padding: 0!important;
  position: absolute;
  left: 26%;
  /*optional*/
  font-family: arial, sans-serif;
  /*input has OS specific font-family*/
  color: #c48d3f;
  text-decoration: underline;
  cursor: pointer;
}

a {
  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
  color: #936300;
  text-decoration: none
}

.chat-box {
  background-color: #fffffa;
  height: 400px;
  width: 400px;
  overflow-y: auto;
  padding: 10px;
  margin: auto;
  margin-top:20px; 
  display: flex;
  flex-direction: column;
}

.chat-main-div {
  float: right;
}

.chat-compensation {
  float: left;
  width: 60%;
}

.chat-text-field {
  width: 400px;
  height: 50px;
  resize: none;
  margin: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 10px;
  overflow-y: auto;
  background-color: #fffffa;
  border: 2px solid #c48d3f
}

.chat-submit {
  cursor: pointer;
    border-radius: 5em;
    color: #fff;
    background: #a06c00;
    border: 0;
    padding-left: 40px;
    padding-right: 40px;
    padding-bottom: 10px;
    padding-top: 10px;
    font-family: 'Ubuntu', sans-serif;
    display: block;
    margin-left: auto;
    margin-right: auto;
    font-size: 13px;
    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
  }

  .chat-bubble-user {
    float: right;
    margin: 10px;
    padding: 10px;
    width: 200px;
    height: auto;
    background-color: lightblue;
  }

  .chat-bubble-other {
    float: left;
    margin: 10px;
    padding: 10px;
    width: 200px;
    height: auto;
    background-color: lightgray;
  }

  .chat-user {
    text-align: right;
  }

  .chat-other {
    text-align: left
  }

  .round-profile {
    border-radius: 50%;
  }

    /* Add a black background color to the top navigation */
  .topnav {
    background-color: #333;
    overflow: hidden;
    padding-right: 100px;
    padding-left: 100px;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 60px;
  }

  /* Style the links inside the navigation bar */
  .topnav a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 16px 20px;
    text-decoration: none;
    font-size: 20px;
  }

  /* Change the color of links on hover */
  .topnav a:hover {
    background-color: #ddd;
    color: black;
  }

  /* Add a color to the active/current link */
  .topnav a.active {
    background-color: #4CAF50;
    color: white;
  }

  .form-group:focus{
     outline: none;
  }

  .logo{
    position:absolute; 
    left: 0; 
    width: 60px;
    height: 60px;
  }

  

